--- a/Community/src/main/webapp/resources/css/main.css
+++ b/Community/src/main/webapp/resources/css/main.css
@@ -2,13 +2,13 @@
 @import url(font-awesome.min.css);
 @import "https://fonts.googleapis.com/css?family=Raleway:100,300,600";
 
-/*
-	Theory by TEMPLATED
-	templated.co @templatedco
-	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
-*/
 
 /* Reset */
+
+/*  
+color
+#5385c1 -> Blue
+*/
 
 	html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
 		margin: 0;
@@ -2722,6 +2722,12 @@
 			line-height: 44px;
 			position: fixed;
 		}
+		.subpage #header .logo {
+			color: #fff;
+		}
+		.subpage #header #nav {
+			color: #d4e0ef;
+		}
 
 	#header {
 		color: #d4e0ef;
@@ -2742,7 +2748,7 @@
 		}
 
 		#header .logo {
-			color: #ffffff;
+			color: #5385c1;
 			display: inline-block;
 			font-weight: 600;
 			height: inherit;
@@ -2752,7 +2758,7 @@
 			padding: 0;
 			position: absolute;
 			top: 0;
-			font-size: 1em;
+			font-size: 2.5em;
 		}
 
 		#header a {
@@ -2764,11 +2770,23 @@
 			padding: 0 0.75em;
 			color: inherit;
 			text-decoration: none;
-			font-size: .8em;
+			font-size: 1.2em;
 		}
 
 			#header a:hover {
-				color: #ffffff;
+				color: #d4e0ef;
+			}
+			
+			#header #nav a:hover{
+				color: #5385c1;
+			}
+			
+			.subpage #header .logo:hover{
+				color: #d4e0ef;
+			}
+			
+			.subpage #header #nav a:hover{
+				color: #fff;
 			}
 
 			#header a:last-child {
@@ -2880,7 +2898,8 @@
 			display: block;
 			padding: 0.75em 0;
 			text-decoration: none;
-			font-weight: 300;
+			font-weight: 500;
+			
 		}
 
 			#navPanel a:not(.close):first-child {
