--- a/member/src/main/webapp/WEB-INF/views/member/login_register_modal.html
+++ b/member/src/main/webapp/WEB-INF/views/member/login_register_modal.html
@@ -1,29 +1,23 @@
-<%@ page language="java" contentType="text/html; charset=UTF-8"
-    pageEncoding="UTF-8"%>
-<%@ taglib uri="http://java.sun.com/jsp/jstl/core" prefix="c" %>
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
 <head>
-<meta charset="UTF-8">
-<title>Login</title>
-<script src="<c:url value="/js/login/jquery-1.10.2.js"/>" type="text/javascript"></script>
-<!-- css -->
-<link href="<c:url value="/css/login/bootstrap.css"/>" rel="stylesheet">
-<link href="<c:url value="/css/login/login-register.css"/>" rel="stylesheet">
-<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
-<script src="<c:url value="/js/login/bootstrap.js"/>" type="text/javascript"></script>
-<script src="<c:url value="/js/login/login-register.js"/>" type="text/javascript"></script>
+    <title>Login/Register Modal by Creative Tim</title>
 
-<!--카카오 로그인-->
-<script src="//developers.kakao.com/sdk/js/kakao.min.js"></script><!-- 
-<script src="https://code.jquery.com/jquery-1.12.4.js"></script> -->
-<script src="/js/login/naveridlogin_js_sdk_2.0.2.js"></script>
+	<meta charset="utf-8" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
-<!-- 구글 로그인 -->
-<script src="https://apis.google.com/js/platform.js" async defer></script>
-<meta name="google-signin-client_id" content="1062510835529-vrqcivq464jhn25nhdghd3ij957430it.apps.googleusercontent.com">
- 
- 
+
+	<style>body{padding-top: 60px;}</style>
+
+    <link href="assets/css/bootstrap.css" rel="stylesheet" />
+
+	<link href="assets/css/login-register.css" rel="stylesheet" />
+	<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
+
+	<script src="assets/js/jquery-1.10.2.js" type="text/javascript"></script>
+	<script src="assets/js/bootstrap.js" type="text/javascript"></script>
+	<script src="assets/js/login-register.js" type="text/javascript"></script>
+
 </head>
 <body>
     <div class="container">
@@ -100,7 +94,6 @@
 		      </div>
 		  </div>
     </div>
-    
 <script type="text/javascript">
     $(document).ready(function(){
         openLoginModal();
