--- a/member/src/main/webapp/css/login.css
+++ b/member/src/main/webapp/css/login.css
@@ -1,135 +1,119 @@
-:root {
-  --input-padding-x: 1.5rem;
-  --input-padding-y: .75rem;
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif
 }
 
 body {
-  background: #ffffff;
- /*  background: linear-gradient(to right, #0062E6, #33AEFF); */
+    height: 100vh;
+    background: linear-gradient(to top, #c9c9ff 50%, #9090fa 90%) no-repeat
 }
 
-.card-signin {
-  border: 0;
-  border-radius: 1rem;
-  box-shadow: 0 0.5rem 1rem 0 rgba(0, 0, 0, 0.1);
+.container {
+    margin: 50px auto
 }
 
-.card-signin .card-title {
-  margin-bottom: 2rem;
-  font-weight: 300;
-  font-size: 1.5rem;
+.panel-heading {
+    text-align: center;
+    margin-bottom: 10px
 }
 
-.card-signin .card-body {
-  padding: 2rem;
+#forgot {
+    min-width: 100px;
+    margin-left: auto;
+    text-decoration: none
 }
 
-.form-signin {
-  width: 100%;
+a:hover {
+    text-decoration: none
 }
 
-.form-signin .btn {
-  font-size: 80%;
-  border-radius: 5rem;
-  letter-spacing: .1rem;
-  font-weight: bold;
-  padding: 1rem;
-  transition: all 0.2s;
+.form-inline label {
+    padding-left: 10px;
+    margin: 0;
+    cursor: pointer
 }
 
-.form-label-group {
-  position: relative;
-  margin-bottom: 1rem;
+.btn.btn-primary {
+    margin-top: 20px;
+    border-radius: 15px
 }
 
-.form-label-group input {
-  height: auto;
-  border-radius: 2rem;
+.panel {
+    min-height: 380px;
+    box-shadow: 20px 20px 80px rgb(218, 218, 218);
+    border-radius: 12px
 }
 
-.form-label-group>input,
-.form-label-group>label {
-  padding: var(--input-padding-y) var(--input-padding-x);
+.input-field {
+    border-radius: 5px;
+    padding: 5px;
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+    border: 1px solid #ddd;
+    color: #4343ff
 }
 
-.form-label-group>label {
-  position: absolute;
-  top: 0;
-  left: 0;
-  display: block;
-  width: 100%;
-  margin-bottom: 0;
-  /* Override default `<label>` margin */
-  line-height: 1.5;
-  color: #495057;
-  border: 1px solid transparent;
-  border-radius: .25rem;
-  transition: all .1s ease-in-out;
+input[type='text'],
+input[type='password'] {
+    border: none;
+    outline: none;
+    box-shadow: none;
+    width: 100%
 }
 
-.form-label-group input::-webkit-input-placeholder {
-  color: transparent;
+.fa-eye-slash.btn {
+    border: none;
+    outline: none;
+    box-shadow: none
 }
 
-.form-label-group input:-ms-input-placeholder {
-  color: transparent;
+img {
+    width: 40px;
+    height: 40px;
+    object-fit: cover;
+    border-radius: 50%;
+    position: relative
 }
 
-.form-label-group input::-ms-input-placeholder {
-  color: transparent;
+a[target='_blank'] {
+    position: relative;
+    transition: all 0.1s ease-in-out
 }
 
-.form-label-group input::-moz-placeholder {
-  color: transparent;
+.bordert {
+    border-top: 1px solid #aaa;
+    position: relative
 }
 
-.form-label-group input::placeholder {
-  color: transparent;
+.bordert:after {
+    content: "or connect with";
+    position: absolute;
+    top: -13px;
+    left: 33%;
+    background-color: #fff;
+    padding: 0px 8px
 }
 
-.form-label-group input:not(:placeholder-shown) {
-  padding-top: calc(var(--input-padding-y) + var(--input-padding-y) * (2 / 3));
-  padding-bottom: calc(var(--input-padding-y) / 3);
-}
+@media(max-width: 360px) {
+    #forgot {
+        margin-left: 0;
+        padding-top: 10px
+    }
 
-.form-label-group input:not(:placeholder-shown)~label {
-  padding-top: calc(var(--input-padding-y) / 3);
-  padding-bottom: calc(var(--input-padding-y) / 3);
-  font-size: 12px;
-  color: #777;
-}
+    body {
+        height: 100%
+    }
 
-.btn-google {
-  color: white;
-  background-color: #ea4335;
-}
+    .container {
+        margin: 30px 0
+    }
 
-.btn-facebook {
-  color: white;
-  background-color: #3b5998;
-}
-
-/* Fallback for Edge
--------------------------------------------------- */
-
-@supports (-ms-ime-align: auto) {
-  .form-label-group>label {
-    display: none;
-  }
-  .form-label-group input::-ms-input-placeholder {
-    color: #777;
-  }
-}
-
-/* Fallback for IE
--------------------------------------------------- */
-
-@media all and (-ms-high-contrast: none),
-(-ms-high-contrast: active) {
-  .form-label-group>label {
-    display: none;
-  }
-  .form-label-group input:-ms-input-placeholder {
-    color: #777;
-  }
+    .bordert:after {
+        left: 25%
+    }
 }
