--- a/member/src/main/webapp/css/login.css
+++ b/member/src/main/webapp/css/login.css
@@ -1,119 +1,78 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
-
-* {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    font-family: 'Poppins', sans-serif
-}
-
+@charset "UTF-8";
 body {
-    height: 100vh;
-    background: linear-gradient(to top, #c9c9ff 50%, #9090fa 90%) no-repeat
+background : #F2F2F2;
 }
-
-.container {
-    margin: 50px auto
+.first_container {
+	width:100%;
+	height:100%;
 }
-
-.panel-heading {
+.second_container {
+/*     width: 100%;
+    max-width: 360px;
+    padding: 40px 30px;
+    position:absoulte;
+    top:50%;
+    left:50%; */
+    position : absolute;
+    top: 50%;
+    left: 50%;
+    width: 100%;
+    max-width: 320px;
+    height:600px;
+	margin-left:-160px;
+    margin-top:-300px;
+    padding: 40px 30px;
     text-align: center;
-    margin-bottom: 10px
+}
+#btnlog{
+	width: 100%;
+	height: 50px;
+}
+#custom-login-btn > img{
+	width: 208.07px;
+	height: 45px;	
+	margin: 5px;
+}
+#userid{
+	width: 100%;
+	height: 50px;
+	margin: 0 0 0 0;
+}
+#pw{
+	width: 100%;
+	height: 50px;
+	margin: 0 0 0 0;
 }
 
-#forgot {
-    min-width: 100px;
-    margin-left: auto;
-    text-decoration: none
+a {
+	padding: 0px;
+	color: inherit;
+    text-decoration: none;
+    margin: 10px;
+ 
+}
+.a-tag{
+    text-align: center;	
+}
+.login_sns_title{
+	margin:10px 0 0;
+	font-size: 12px;
+	text-align: center;	
+}
+.main_img{
+	width:100%;
+	padding:5px;
+}
+.main_img>img{
+	width:100%;
+}
+.login_sns_title{
+	padding:3px;
 }
 
-a:hover {
-    text-decoration: none
+.abcRioButton.abcRioButtonLightBlue {
+	margin: 0 auto;
 }
-
-.form-inline label {
-    padding-left: 10px;
-    margin: 0;
-    cursor: pointer
-}
-
-.btn.btn-primary {
-    margin-top: 20px;
-    border-radius: 15px
-}
-
-.panel {
-    min-height: 380px;
-    box-shadow: 20px 20px 80px rgb(218, 218, 218);
-    border-radius: 12px
-}
-
-.input-field {
-    border-radius: 5px;
-    padding: 5px;
-    display: flex;
-    align-items: center;
-    cursor: pointer;
-    border: 1px solid #ddd;
-    color: #4343ff
-}
-
-input[type='text'],
-input[type='password'] {
-    border: none;
-    outline: none;
-    box-shadow: none;
-    width: 100%
-}
-
-.fa-eye-slash.btn {
-    border: none;
-    outline: none;
-    box-shadow: none
-}
-
-img {
-    width: 40px;
-    height: 40px;
-    object-fit: cover;
-    border-radius: 50%;
-    position: relative
-}
-
-a[target='_blank'] {
-    position: relative;
-    transition: all 0.1s ease-in-out
-}
-
-.bordert {
-    border-top: 1px solid #aaa;
-    position: relative
-}
-
-.bordert:after {
-    content: "or connect with";
-    position: absolute;
-    top: -13px;
-    left: 33%;
-    background-color: #fff;
-    padding: 0px 8px
-}
-
-@media(max-width: 360px) {
-    #forgot {
-        margin-left: 0;
-        padding-top: 10px
-    }
-
-    body {
-        height: 100%
-    }
-
-    .container {
-        margin: 30px 0
-    }
-
-    .bordert:after {
-        left: 25%
-    }
+.a-tag{
+	margin:5px;
 }
