--- a/member/src/main/webapp/css/reg.css
+++ b/member/src/main/webapp/css/reg.css
@@ -14,6 +14,7 @@ background : #F2F2F2;
     position:absoulte;
     top:50%;
     left:50%; */
+    border: 1px solid rgb(225,225,225);
     position : absolute;
     top: 50%;
     left: 50%;
@@ -24,6 +25,7 @@ background : #F2F2F2;
     margin-top:-325px;
     padding: 40px 30px;
     text-align: center;
+    border-radius: 3px;
 }
 .mb-3>input{
 	margin:1px 1px;
@@ -36,4 +38,20 @@ background : #F2F2F2;
 	width: 100%;
 	height: 50px;
 	
+}
+
+.form-label{
+	text-align : left;
+	display: block;
+	font-weight: bolder;
+	margin-top: 10px;
+}
+
+#pwment{
+	font-weight: normal;
+	font-size: 13px;
+}
+
+#idCheckMsg{
+	font-size: 13px;
 }
