--- a/member/src/main/webapp/css/mypage.css
+++ b/member/src/main/webapp/css/mypage.css
@@ -1,17 +1,40 @@
 @charset "UTF-8";
 
+#banner {
+	height: 260px;
+}
 
-#div1 {
-   	border: 1px solid rgb(225,225,225);
-    position : absolute;
-    top: 50%;
-    left: 50%;
-    width: 100%;
+#div1{
+	
+}
+
+#div2 {
+   /* 	border: 1px solid rgb(225,225,225); */
+    /* position : absolute; */
+  	 margin:0 auto; 
+    /*width: 100%;*/
     max-width: 530px;
-    height:600px;
-	margin-left:-250px;
-    margin-top:-310px;
+    height:800px;
     padding: 40px 30px;
     text-align: center;
-     border-radius: 3px; 
+     /* border-radius: 3px;  */
+}
+
+
+#div2>label {
+	text-align: left;
+	font-size: 15px;
+	margin-top: 15px;
+}
+
+#div2>input{
+	margin: 3px;
+}
+
+#div2> #btnEdit{
+	margin:15px;
+}
+
+#leave{
+	background-color:#696969;
 }
