WithEarth Project : Update view & css -20210304

--- a/member/src/main/webapp/css/dona/chat/style.css
+++ b/member/src/main/webapp/css/dona/chat/style.css
@@ -137,7 +137,7 @@ html, body{
 	margin-right : 10px;
 	margin-left : 5px;	
 	border : thin;
-	background-color: #F2AE72;
+	background-color: #82B8D9;
 	padding : 7px;
 	margin-bottom : 10px;
 }
@@ -150,7 +150,7 @@ html, body{
 	margin-right : 5px;	
 	border : thin;
 	background-color: #DDD;
-  padding : 7px;
+    padding : 7px;
 	margin-bottom : 10px;
 }
 
