--- a/member/src/main/webapp/css/dona/main.css
+++ b/member/src/main/webapp/css/dona/main.css
@@ -11,15 +11,13 @@
 	#two{
 	  height : 300px;
 	}
-	
+
 	.article{	
 	 width : 250px;
 	 height : 320px;	 
 	 padding : 15px;
-	 
-	 text-align : center;
 	 margin-bottom : 30px;
-	/*  border : 5px solid #EEE; */
+	 float : left !important;
 	 border-radius: 20px;
 	}
 	
@@ -97,9 +95,9 @@
 	 width : 60px;
 	}
 	.searchForm {
-	 margin-left : 750px;
 	 overflow : hidden;
 	 text-align: left;
+	 clear: both;
 	}
 	
 	#searchType{
@@ -109,7 +107,7 @@
 	}
 	
 	.search-unit{
-	  float : left; 	 
+	  float : right; 	 
 	}
 	
 	#keyword{
