--- a/walking/src/main/webapp/css/main.css
+++ b/walking/src/main/webapp/css/main.css
@@ -1715,7 +1715,7 @@ color
 
 	code {
 		background: rgba(144, 144, 144, 0.075);
-		border-radius: 5px;
+		border-radius: 0;
 		border: solid 1px #dbdbdb;
 		font-family: "Courier New", monospace;
 		font-size: 0.9em;
@@ -2009,7 +2009,7 @@ color
 		-ms-appearance: none;
 		appearance: none;
 		background: rgba(144, 144, 144, 0.075);
-		border-radius: 5px;
+		border-radius: 0;
 		border: none;
 		border: solid 1px #dbdbdb;
 		color: inherit;
@@ -2123,7 +2123,7 @@ color
 			input[type="checkbox"] + label:before,
 			input[type="radio"] + label:before {
 				background: rgba(144, 144, 144, 0.075);
-				border-radius: 5px;
+				border-radius: 0;
 				border: solid 1px #dbdbdb;
 				content: '';
 				display: inline-block;
@@ -2151,7 +2151,7 @@ color
 		}
 
 	input[type="checkbox"] + label:before {
-		border-radius: 5px;
+		border-radius: 0;
 	}
 
 	input[type="radio"] + label:before {
@@ -2199,7 +2199,7 @@ color
 
 		.box.alt {
 			border: 0;
-			border-radius: 5px;
+			border-radius: 0;
 			padding: 0;
 		}
 
@@ -2556,7 +2556,7 @@ color
 		-ms-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
 		transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
 		background-color: #5a5a5a;
-		border-radius: 5px;
+		border-radius: 0;
 		border: 1px;
 		color: #ffffff !important;
 		cursor: pointer;
